force-app/main/default/objects/adapps__OptimizerPlus_Active_WF_Rules__c/adapps__OptimizerPlus_Active_WF_Rules__c.object-meta.xml
<CustomObject>
    <label>Active Workflow Rule Limits</label>
    <nameField>
        <label>Active Workflow Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Workflow Rules Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>