force-app/main/default/objects/adapps__OptimizerPlus_Active_WF_Rules__c/fields/adapps__Limit__c.field-meta.xml
<CustomField>
    <fullName>adapps__Limit__c</fullName>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>