force-app/main/default/objects/adapps__OptimizerPlus_Active_WF_Rules__c/fields/adapps__Low_Impact__c.field-meta.xml
<CustomField>
    <fullName>adapps__Low_Impact__c</fullName>
    <label>Low Impact</label>
    <summaryFilterItems>
        <field>adapps__OptimizerPlus_Active_WF_Rule_Item__c.adapps__Status__c</field>
        <operation>equals</operation>
        <value>Low Impact</value>
    </summaryFilterItems>
    <summaryForeignKey>adapps__OptimizerPlus_Active_WF_Rule_Item__c.adapps__Active_Workflow_Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>