force-app/main/default/objects/adapps__OptimizerPlus_Active_WF_Rules__c/fields/adapps__Optimizer_Report__c.field-meta.xml
<CustomField>
    <fullName>adapps__Optimizer_Report__c</fullName>
    <label>Optimizer Report</label>
    <referenceTo>adapps__Optimizer_Report__c</referenceTo>
    <relationshipLabel>Active Workflow Rules</relationshipLabel>
    <relationshipName>Active_Workflow_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>